--- a/public/testpage/testpage2.html
+++ b/public/testpage/testpage2.html
@@ -5,6 +5,54 @@
     <title></title>
   </head>
   <body>
+    <!-- Section -->
+  	<section>
+      <div id="div_top" class="" style=" margin:0 auto; height: 250px; position:relative; ">
+
+        <div class="image-container" style="height: 180px; width: 240px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
+          <a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+        </div>
+        <div style="height: 240px; width: 400px; left:240px; width:30%; position:absolute; margin:20px;">
+          <a href="channel_private.html">
+            <h2 style="margin-top:20px; margin-left:15px">고양이채널</h2>
+          </a>
+          <p style="margin-left:15px">구독자수, 영상수</p>
+        </div>
+
+        <div style="height: 240px; margin:10px; float:right; width:300px; width:20%">
+          <ul class="actions" style="margin-top:85px;" >
+            <li><a href="#" class="button" >관리</a></li>
+            <li><a href="#" class="button">삭제</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+  	  <!-- Section -->
+    <section>
+      <div class="" style=" margin:0 auto; height: 250px; position:relative; ">
+
+
+        <div class="image-container" style="height: 180px; width: 240px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
+          <a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+        </div>
+        <div style="height: 240px; width: 400px; left:240px; width:30%; position:absolute;margin:20px;">
+          <a href="channel_private.html">
+            <h2 style="margin-top:20px; margin-left:15px">고양이채널</h2>
+          </a>
+          <p style="margin-left:15px">구독자수, 영상수</p>
+        </div>
+
+        <div style="height: 240px; margin:10px; float:right; width:300px; width:20%">
+          <ul class="actions" style="margin-top:85px;" >
+            <li><a href="#" class="button" >관리</a></li>
+            <li><a href="#" class="button">삭제</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+    </section>
 
   </body>
 </html>
