--- a/public/channel_private.html
+++ b/public/channel_private.html
@@ -5,7 +5,12 @@
 		<title>E-tube</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../html5up-editorial\assets\css\main.css" />
+		<link rel="stylesheet" href="html5\assets\css\main.css" />
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-storage.js"></script>
+		<script src="googlelogin.js?useEmulator=true"></script>
 		<style>
 		ul, li{
         list-style:none;
@@ -22,7 +27,80 @@
 			}
 		</style>
 		</div>
+		<script>
+		function resize(img){
 
+		   var width = img.width;
+		   var height = img.height;
+
+		   var maxWidth = 160;
+		   var maxHeight = 120;
+
+		   if(width > maxWidth || height > maxHeight){
+
+		      if(width > height){
+		         resizeWidth = maxWidth;
+		         resizeHeight = (height * resizeWidth) / width;
+
+		      }else{
+		         resizeHeight = maxHeight;
+		         resizeWidth = (width * resizeHeight) / height;
+		      }
+
+		   }else{
+		      resizeWidth = width;
+		      resizeHeight = height;
+		   }
+
+		   img.width = resizeWidth;
+		   img.height = resizeHeight;
+		}
+
+		function initApp(){
+			firebase.auth().onAuthStateChanged(function(user) {
+					if (user) {
+						console.log("로그인 상태");
+						name = user.displayName;
+						email = user.email;
+						photoUrl = user.photoURL;
+						emailVerified = user.emailVerified;
+						uid = user.uid;
+			temp = location.href.split("?");
+
+			var channelRef_user = firebase.database().ref('userInfo/'+uid+'/channel_info');
+			channelRef_user.once('value', (snapshot)=>{
+
+				snapshot.forEach((childSnapshot) => {
+				var childKey = childSnapshot.key;
+				var childData = childSnapshot.val();
+				var url = childData.imgpath;
+				if(childData.name==temp[1]){
+					var img1 = document.getElementById("img1");
+					img1.src = url;
+
+					var h2 = document.getElementById("h2_1");
+					h2.innerHTML=childData.name;
+
+				}
+
+				});
+
+			});
+
+		}else{
+			console.log("로그아웃 상태");
+		}
+
+
+		});
+
+		}
+
+		window.onload=function(){
+			initApp();
+		}
+
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -56,11 +134,11 @@
 							<!-- Section -->
 
                 <div class="image-container" style="height: 120px; width: 160px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
-                  <a href="#" class="test"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkJocDo9hkBuj_WyT8OOGZ3ha2tWjv5NgoXg&usqp=CAU"></img> </a>
+                  <a href="#" class="test"> <img id="img1" src="#" onload=resize(this)></img> </a>
                 </div>
               	<div style="height: 120px; width: 400px; left:160px; width:30%; position:absolute;margin:20px;">
 								  <a href="channel_private.html">
-										<h2 style="margin-top:5px; margin-left:15px">고양이채널</h2>
+										<h2 id="h2_1"style="margin-top:5px; margin-left:15px"></h2>
 									</a>
 										<p style="margin-left:15px">구독자수, 영상수<br>
 										<a href="#">채널주인스펙확인</a></p>
@@ -266,10 +344,10 @@
 
 
 		<!-- Scripts 아직뭔지 모르겠음-->
-    <script src="../html5up-editorial/assets/js/jquery.min.js"></script>
-    <script src="../html5up-editorial/assets/js/browser.min.js"></script>
-    <script src="../html5up-editorial/assets/js/breakpoints.min.js"></script>
-    <script src="../html5up-editorial/assets/js/util.js"></script>
-    <script src="../html5up-editorial/assets/js/main.js"></script>
+    <script src="html5/assets/js/jquery_main.js"></script>
+    <script src="html5/assets/js/browser_main.js"></script>
+    <script src="html5/assets/js/breakpoints_main.js"></script>
+    <script src="html5/assets/js/util.js"></script>
+    <script src="html5/assets/js/main.js"></script>
 	</body>
 </html>
