--- a/public/studyboard.html
+++ b/public/studyboard.html
@@ -147,86 +147,17 @@ body{
 						<h2>스터디게시판</h2>
 					</header>
 
-					<!-- 게시판 목록  -->
-					<li>
-							<ul id ="ulTable">
-									<li>
-											<ul>
-													<li>카테고리</li>
-													<li>제목</li>
-													<li>작성일</li>
-													<li>작성자</li>
-													<li>레벨</li>
-													<li>조회수</li>
-											</ul>
-									</li>
-									<!-- 게시물이 출력될 영역 -->
-									<li>
-											<ul>
-													<li style="text-align:center;">생활</li>
-													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li style="text-align:center;">2020.11.30</li>
-													<li style="text-align:center;">홍신기</li>
-													<li style="text-align:center;">Lv0</li>
-													<li style="text-align:center;">0</li>
-											</ul>
-									</li>
 
-									<li>
-											<ul>
-													<li style="text-align:center;">스포츠</li>
-													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li style="text-align:center;">2020.11.30</li>
-													<li style="text-align:center;">홍신기</li>
-													<li style="text-align:center;">Lv0</li>
-													<li style="text-align:center;">0</li>
-											</ul>
-									</li>
+	  	</ul>
+			<li>
+				<ul>
+					<div id="contents">
+						<object type="text/html" height="600px" width="800px" data="studyboard_list.html">
 
-									<li>
-											<ul>
-													<li style="text-align:center;">게임</li>
-													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li style="text-align:center;">2020.11.30</li>
-													<li style="text-align:center;">주형우</li>
-													<li style="text-align:center;">Lv0</li>
-													<li style="text-align:center;">0</li>
-											</ul>
-									</li>
-
-									<li>
-											<ul>
-													<li style="text-align:center;">음악</li>
-													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
-													<li style="text-align:center;">2020.11.30</li>
-													<li style="text-align:center;">장예주</li>
-													<li style="text-align:center;">Lv0</li>
-													<li style="text-align:center;">0</li>
-											</ul>
-									<li>
-							</ul>
-					</li>
-
-					<!-- 게시판 페이징 영역 -->
-					<li>
-							<div id="divPaging">
-									<div><a href="#" style="color:#3D4449"><p>◀</a></div>
-										 <div><a href="#" style="color:#3D4449"><p><b>1</b></p></a></div>
-									<div><a href="#" style="color:#3D4449"><p>2</p></a></div>
-									<div><a href="#" style="color:#3D4449"><p>3</p></a></div>
-									<div><a href="#" style="color:#3D4449"><p>4</p></a></div>
-									<div><a href="#" style="color:#3D4449"><p>5</p></a></div>
-									<div><a href="#" style="color:#3D4449"><p>▶</a></div>
-							</div>
-					</li>
-
-			</ul>
-
-			<div style="height: 210px; float:right; ">
-				<ul class="actions" >
-					<li><a href="#" class="button">글쓰기</a></li>
+						</object>
+					</div>
 				</ul>
-			</div>
+			</li>
 	</div>
 
 
