--- a/public/subscribed_channel.html
+++ b/public/subscribed_channel.html
@@ -59,7 +59,7 @@ window.addEventListener("message", function(event){
     <header class="major">
       <h2>구독 채널 관리</h2>
     </header>
-    <div class="" style=" margin:0 auto%; height: 250px; position:relative; ">
+    <div class="" style=" margin:0 auto; height: 250px; position:relative; ">
 
   <!-- Section -->
 
@@ -81,7 +81,7 @@ window.addEventListener("message", function(event){
     </div>
   </section>
   <section>
-    <div class="" style=" margin:0 auto%; height: 250px; position:relative; ">
+    <div class="" style=" margin:0 auto; height: 250px; position:relative; ">
 
   <!-- Section -->
 
