--- a/public/studyboard_list.html
+++ b/public/studyboard_list.html
@@ -174,11 +174,11 @@
 
 
   <!-- 글쓰기 버튼 영역 -->
-      <div style="height: 210px; float:right; ">
-          <ul class="actions" >
-            <li><a href="#" class="button">글쓰기</a></li>
-          </ul>
-      </div>
+  <div style="height: 210px; float:right; ">
+      <ul class="actions" >
+        <li><a href="studyboard_write.html" class="button">글쓰기</a></li>
+      </ul>
+  </div>
 
 
   </body>
